--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -12,13 +12,10 @@ if (DOXYGEN_FOUND)
     ${DOXYGEN_EXECUTABLE} ${CMAKE_BINARY_DIR}/ignition.dox
     WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
 
-    COMMAND cp ${CMAKE_SOURCE_DIR}/doc/ignition_logo.svg
-            ${CMAKE_BINARY_DIR}/doxygen/html
-
     COMMAND ${DOXYGEN_EXECUTABLE} ${CMAKE_BINARY_DIR}/tutorials.dox
 
     COMMENT "Generating API documentation with Doxygen" VERBATIM)
 
   install(FILES ${CMAKE_BINARY_DIR}/doc/${PROJECT_NAME_LOWER}.tag.xml 
-    DESTINATION ${CMAKE_INSTALL_PREFIX}/share/ignition/${PROJECT_NAME_LOWER}${PROJECT_MINOR_VERSION}_${PROJECT_MINOR_VERSION})
+    DESTINATION ${CMAKE_INSTALL_PREFIX}/share/ignition/${PROJECT_NAME_LOWER}_${PROJECT_VERSION_MINOR})
 endif()
