--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -25,7 +25,7 @@ pipelines:
           - mkdir build
           - cd build
           - cmake .. -DENABLE_TESTS_COMPILATION=false
-          - make install
+          - make -j4 install
           - cd ../..
           # Ignition GUI
           - mkdir build
