--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -11,6 +11,7 @@ pipelines:
           - apt update
           - apt install -y build-essential wget cmake cppcheck mercurial
             libfreeimage-dev libgts-dev uuid-dev libswscale-dev libavutil-dev libavcodec-dev libavformat-dev libavdevice-dev
+            libogre-1.9-dev
             libprotoc-dev libprotobuf-dev protobuf-compiler
             qtbase5-dev libtinyxml2-dev
             libignition-cmake-dev
