--- a/src/plugins/plot/CMakeLists.txt
+++ b/src/plugins/plot/CMakeLists.txt
@@ -4,7 +4,7 @@
 set (gtest_local_sources
   IncrementalPlot_TEST.cc
   Plot_TEST.cc
-  PlotCurve_TEST.cc
+  Curve_TEST.cc
 )
 
 ign_build_tests(SOURCES ${gtest_local_sources} LIB_DEPS Plot)
