--- a/include/ignition/gui/ign_auto_headers.hh.in
+++ b/include/ignition/gui/ign_auto_headers.hh.in
@@ -1,3 +1,3 @@
 // Automatically generated
-#include <ignition/${IGN_PROJECT_NAME}/config.hh>
+#include <ignition/${IGN_DESIGNATION}/config.hh>
 ${ign_headers}
