--- a/test/performance/CMakeLists.txt
+++ b/test/performance/CMakeLists.txt
@@ -1,8 +1,3 @@
-set(TEST_TYPE "PERFORMANCE")
+ign_get_sources(tests)
 
-set(tests
-)
-
-link_directories(${PROJECT_BINARY_DIR}/test)
-
-ign_build_tests(SOURCES ${tests})
+ign_build_tests(TYPE PERFORMANCE SOURCES ${tests})
