BUILD_ERROR -> ign_build_error

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,7 +65,7 @@ ign_find_package(ignition-msgs${IGN_MSGS_VER} REQUIRED)
 # Find ignition-transport
 find_package(ignition-transport3 QUIET)
 if (NOT ignition-transport3_FOUND)
-  BUILD_ERROR ("Missing: Ignition Transport libignition-transport3-dev.")
+  ign_build_error("Missing: Ignition Transport libignition-transport3-dev.")
 else()
   message (STATUS "Found Ignition Transport 3")
   set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${IGNITION-TRANSPORT_CXX_FLAGS}")
@@ -85,14 +85,14 @@ endif()
 # Find QT
 find_package (Qt5Widgets)
 if (NOT Qt5Widgets_FOUND)
-  BUILD_ERROR("Missing: Qt5Widgets")
+  ign_build_error("Missing: Qt5Widgets")
 else()
   message (STATUS "Found Qt5Widgets")
 endif()
 
 find_package (Qt5Core)
 if (NOT Qt5Core_FOUND)
-  BUILD_ERROR("Missing: Qt5Core")
+  ign_build_error("Missing: Qt5Core")
 else()
   message (STATUS "Found Qt5Core")
 endif()
