--- a/src/plugins/CMakeLists.txt
+++ b/src/plugins/CMakeLists.txt
@@ -2,6 +2,7 @@
 # shared libraries
 
 set (gtest_local_sources
+  CameraTrack3D_TEST.cc
   Grid3D_TEST.cc
   ImageDisplay_TEST.cc
   Publisher_TEST.cc
@@ -15,7 +16,7 @@ set (gtest_local_sources
   TopicViewer_TEST.cc
 )
 
-ign_build_tests(SOURCES ${gtest_rendering_sources}
+ign_build_tests(SOURCES ${gtest_local_sources}
                 LIB_DEPS ${IGNITION-RENDERING_LIBRARIES})
 
 add_subdirectory(plot)
