--- a/test/integration/CMakeLists.txt
+++ b/test/integration/CMakeLists.txt
@@ -2,6 +2,7 @@ set(TEST_TYPE "INTEGRATION")
 
 set(tests
   Examples_TEST.cc
+  ExamplesBuild_TEST.cc
 )
 
 link_directories(${PROJECT_BINARY_DIR}/test)
