--- a/src/plugins/plot/CMakeLists.txt
+++ b/src/plugins/plot/CMakeLists.txt
@@ -2,7 +2,9 @@
 # shared libraries
 
 set (gtest_local_sources
+  Canvas_TEST.cc
   Curve_TEST.cc
+  ExportDialog_TEST.cc
   IncrementalPlot_TEST.cc
   Plot_TEST.cc
 )
