--- a/examples/plugin/animated_box/CMakeLists.txt
+++ b/examples/plugin/animated_box/CMakeLists.txt
@@ -18,6 +18,7 @@ include_directories(SYSTEM
     ${IGNITION-COMMON_INCLUDE_DIRS}
     ${IGNITION-MATH_INCLUDE_DIRS}
     ${IGNITION-RENDERING_INCLUDE_DIRS}
+    ${IGNITION-GUI_INCLUDE_DIRS}
     ${Qt5Core_INCLUDE_DIRS})
 
 link_directories(
