--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -10,7 +10,7 @@ pipelines:
           - apt update
           - apt install -y
             build-essential wget cmake cppcheck mercurial
-            qtbase5-dev libqwt-qt5-dev libtinyxml2-dev libprotobuf-dev
+            qtbase5-dev libqwt-qt5-dev libtinyxml2-dev libprotoc-dev libprotobuf-dev
             libignition-cmake-dev
             libignition-math4-dev
             libignition-common-dev
