--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -20,8 +20,16 @@ pipelines:
             libogre-1.9-dev
           # Static checking before building
           - sh tools/code_check.sh
+          # Dependency: Ignition cmake
+          - hg clone http://bitbucket.org/ignitionrobotics/ign-cmake -b Components
+          - cd ign-cmake
+          - mkdir build
+          - cd build
+          - cmake ..
+          - make -j4 install
+          - cd ../..
           # Ignition rendering
-          - hg clone http://bitbucket.org/ignitionrobotics/ign-rendering -b default
+          - hg clone http://bitbucket.org/ignitionrobotics/ign-rendering -b ign-cmake
           - cd ign-rendering
           - mkdir build
           - cd build
