--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -12,7 +12,7 @@ pipelines:
           - apt install -y
             build-essential wget cmake cppcheck mercurial
             qtbase5-dev libqwt-qt5-dev libtinyxml2-dev libprotoc-dev libprotobuf-dev
-            libignition-cmake-dev
+            libignition-cmake1-dev
             libignition-math4-dev
             libignition-common-dev
             libignition-msgs-dev
