use PROJECT_LIBRARY_TARGET_NAME

--- a/include/ignition/gui/CMakeLists.txt
+++ b/include/ignition/gui/CMakeLists.txt
@@ -53,7 +53,7 @@ ign_create_core_library(SOURCES
   ${resources_RCC}
 )
 
-target_link_libraries(${PROJECT_NAME_LOWER}
+target_link_libraries(${PROJECT_LIBRARY_TARGET_NAME}
   ${IGNITION-COMMON_LIBRARIES}
   ${IGNITION-MATH_LIBRARIES}
   ${IGNITION-MSGS_LIBRARIES}
