--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -13,12 +13,19 @@ pipelines:
             build-essential wget cmake cppcheck mercurial
             qtbase5-dev libqwt-qt5-dev libtinyxml2-dev libprotoc-dev libprotobuf-dev
             libignition-cmake1-dev
-            libignition-common-dev
-            libignition-math4-dev
-            libignition-msgs-dev
+            libignition-common2-dev
+            libignition-math5-dev
+            libignition-msgs2-dev
             libignition-tools-dev
-            libignition-transport4-dev
             libogre-1.9-dev
+          # Dependency: Ignition Transport
+          - hg clone http://bitbucket.org/ignitionrobotics/ign-transport -b default
+          - cd ign-transport
+          - mkdir build
+          - cd build
+          - cmake ..
+          - make -j4 install
+          - cd ../..
           # Static checking before building
           - sh tools/code_check.sh
           # Ignition rendering
