fix linking to tinyxml2

--- a/include/ignition/gui/CMakeLists.txt
+++ b/include/ignition/gui/CMakeLists.txt
@@ -60,7 +60,7 @@ target_link_libraries(${PROJECT_LIBRARY_TARGET_NAME}
   ${IGNITION-TRANSPORT_LIBRARIES}
   ${Qt5Core_LIBRARIES}
   ${Qt5Widgets_LIBRARIES}
-  ${tinyxml2_LIBRARIES}
+  TINYXML2::TINYXML2
 )
 
 add_subdirectory(plugins)
