Use QML on the docks

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -81,6 +81,7 @@ endif()
 #--------------------------------------
 # Find QT
 find_package (Qt5 COMPONENTS Core Widgets REQUIRED)
+find_package (Qt5 COMPONENTS Quick QuickControls2 QuickWidgets)
 
 #--------------------------------------
 # Find QWT (QT graphing library)
