Empty main window, and example hello plugin working

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -80,7 +80,14 @@ endif()
 
 #--------------------------------------
 # Find QT
-find_package (Qt5 COMPONENTS Core Widgets REQUIRED)
+find_package (Qt5
+  COMPONENTS
+    Core
+    Widgets
+    Quick
+    QuickControls2
+  REQUIRED
+)
 
 #--------------------------------------
 # Find QWT (QT graphing library)
