--- a/include/ignition/gui/CMakeLists.txt
+++ b/include/ignition/gui/CMakeLists.txt
@@ -1,11 +1,21 @@
 include_directories(
   ${Qt5Core_INCLUDE_DIRS}
   ${tinyxml_INCLUDE_DIRS}
+  ${Qt5Qml_INCLUDE_DIRS}
+  ${Qt5Quick_INCLUDE_DIRS}
+  ${Qt5QuickControls2_INCLUDE_DIRS}
+  ${Qt5QuickWidgets_INCLUDE_DIRS}
 )
 
 set (CMAKE_AUTOMOC ON)
 
-add_definitions(${Qt5Core_DEFINITIONS})
+add_definitions(
+  ${Qt5Core_DEFINITIONS}
+  ${Qt5Qml_DEFINITIONS}
+  ${Qt5Quick_DEFINITIONS}
+  ${Qt5QuickControls2_DEFINITIONS}
+  ${Qt5QuickWidgets_DEFINITIONS}
+)
 
 set (qt_headers
   BoolWidget.hh
@@ -60,10 +70,14 @@ target_link_libraries(${PROJECT_LIBRARY_TARGET_NAME}
   ${IGNITION-TRANSPORT_LIBRARIES}
   ${Qt5Core_LIBRARIES}
   ${Qt5Widgets_LIBRARIES}
+  ${Qt5Qml_LIBRARIES}
+  ${Qt5Quick_LIBRARIES}
+  ${Qt5QuickControls2_LIBRARIES}
+  ${Qt5QuickWidgets_LIBRARIES}
   TINYXML2::TINYXML2
 )
 
-add_subdirectory(plugins)
+#add_subdirectory(plugins)
 
 #ign_install_includes("" ${CMAKE_CURRENT_BINARY_DIR}/${IGN_DESIGNATION}.hh)
 #ign_install_includes(${IGN_DESIGNATION} ${headers} ${qt_headers})
