--- a/examples/config/time.config
+++ b/examples/config/time.config
@@ -12,6 +12,7 @@
   <world_stats>
     <sim_time>true</sim_time>
     <real_time>true</real_time>
+    <real_time_factor>true</real_time_factor>
     <topic>/world_stats</topic>
   </world_stats>
 
