comment out widgets which aren't ready

--- a/include/ignition/gui/CMakeLists.txt
+++ b/include/ignition/gui/CMakeLists.txt
@@ -4,7 +4,6 @@ include_directories(
   ${Qt5Qml_INCLUDE_DIRS}
   ${Qt5Quick_INCLUDE_DIRS}
   ${Qt5QuickControls2_INCLUDE_DIRS}
-  ${Qt5QuickWidgets_INCLUDE_DIRS}
 )
 
 set (CMAKE_AUTOMOC ON)
@@ -14,41 +13,40 @@ add_definitions(
   ${Qt5Qml_DEFINITIONS}
   ${Qt5Quick_DEFINITIONS}
   ${Qt5QuickControls2_DEFINITIONS}
-  ${Qt5QuickWidgets_DEFINITIONS}
 )
 
 set (qt_headers
-  BoolWidget.hh
-  CollapsibleWidget.hh
-  ColorWidget.hh
+#  BoolWidget.hh
+#  CollapsibleWidget.hh
+#  ColorWidget.hh
   Dialog.hh
   Dock.hh
-  EditableLabel.hh
-  EnumWidget.hh
-  GeometryWidget.hh
+#  EditableLabel.hh
+#  EnumWidget.hh
+#  GeometryWidget.hh
   MainWindow.hh
-  MessageWidget.hh
-  NumberWidget.hh
+#  MessageWidget.hh
+#  NumberWidget.hh
   Plugin.hh
-  Pose3dWidget.hh
-  PropertyWidget.hh
-  StringWidget.hh
-  VariablePill.hh
-  VariablePillContainer.hh
-  Vector3dWidget.hh
+#  Pose3dWidget.hh
+#  PropertyWidget.hh
+#  StringWidget.hh
+#  VariablePill.hh
+#  VariablePillContainer.hh
+#  Vector3dWidget.hh
 )
 
 set (headers
-  Conversions.hh
-  DragDropModel.hh
-  Enums.hh
-  Helpers.hh
+#  Conversions.hh
+#  DragDropModel.hh
+#  Enums.hh
+#  Helpers.hh
   Iface.hh
   ign.hh
   qt.h
-  qwt.h
-  QtMetatypes.hh
-  SearchModel.hh
+#  qwt.h
+#  QtMetatypes.hh
+#  SearchModel.hh
   System.hh
 )
 
@@ -73,7 +71,6 @@ target_link_libraries(${PROJECT_LIBRARY_TARGET_NAME}
   ${Qt5Qml_LIBRARIES}
   ${Qt5Quick_LIBRARIES}
   ${Qt5QuickControls2_LIBRARIES}
-  ${Qt5QuickWidgets_LIBRARIES}
   TINYXML2::TINYXML2
 )
 
