--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,11 +2,39 @@ include_directories(${PROJECT_BINARY_DIR})
 
 ign_get_libsources_and_unittests(sources_no_path gtest_sources)
 
-set(sources)
-foreach(src ${sources_no_path})
-  list(APPEND sources ${CMAKE_CURRENT_SOURCE_DIR}/${src})
-endforeach()
-set(sources ${sources} PARENT_SCOPE)
+set (sources
+#  ${CMAKE_CURRENT_SOURCE_DIR}/BoolWidget.cc
+#  ${CMAKE_CURRENT_SOURCE_DIR}/CollapsibleWidget.cc
+#  ${CMAKE_CURRENT_SOURCE_DIR}/ColorWidget.cc
+#  ${CMAKE_CURRENT_SOURCE_DIR}/Conversions.cc
+  ${CMAKE_CURRENT_SOURCE_DIR}/Dialog.cc
+  ${CMAKE_CURRENT_SOURCE_DIR}/Dock.cc
+#  ${CMAKE_CURRENT_SOURCE_DIR}/DragDropModel.cc
+#  ${CMAKE_CURRENT_SOURCE_DIR}/EditableLabel.cc
+#  ${CMAKE_CURRENT_SOURCE_DIR}/EnumWidget.cc
+#  ${CMAKE_CURRENT_SOURCE_DIR}/GeometryWidget.cc
+#  ${CMAKE_CURRENT_SOURCE_DIR}/Helpers.cc
+  ${CMAKE_CURRENT_SOURCE_DIR}/Iface.cc
+  ${CMAKE_CURRENT_SOURCE_DIR}/ign.cc
+  ${CMAKE_CURRENT_SOURCE_DIR}/MainWindow.cc
+#  ${CMAKE_CURRENT_SOURCE_DIR}/MessageWidget.cc
+#  ${CMAKE_CURRENT_SOURCE_DIR}/NumberWidget.cc
+  ${CMAKE_CURRENT_SOURCE_DIR}/Plugin.cc
+#  ${CMAKE_CURRENT_SOURCE_DIR}/Pose3dWidget.cc
+#  ${CMAKE_CURRENT_SOURCE_DIR}/PropertyWidget.cc
+#  ${CMAKE_CURRENT_SOURCE_DIR}/SearchModel.cc
+#  ${CMAKE_CURRENT_SOURCE_DIR}/StringWidget.cc
+#  ${CMAKE_CURRENT_SOURCE_DIR}/VariablePill.cc
+#  ${CMAKE_CURRENT_SOURCE_DIR}/VariablePillContainer.cc
+#  ${CMAKE_CURRENT_SOURCE_DIR}/Vector3dWidget.cc
+  PARENT_SCOPE
+)
+
+#set(sources)
+#foreach(src ${sources_no_path})
+#  list(APPEND sources ${CMAKE_CURRENT_SOURCE_DIR}/${src})
+#endforeach()
+#set(sources ${sources} PARENT_SCOPE)
 
 # this test currently fails on brew (issue #27)
 # so disable it for now
