--- a/src/plugins/plot/CMakeLists.txt
+++ b/src/plugins/plot/CMakeLists.txt
@@ -4,7 +4,7 @@
 set (gtest_local_sources
   Curve_TEST.cc
   IncrementalPlot_TEST.cc
-  Plot_TEST.cc
+  # Plot_TEST.cc
   TopicCurveHandler_TEST.cc
 )
 
